--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.admin.ridesharemobileclient">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:name=".config.App"
         android:allowBackup="true"
@@ -10,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.main.MainActivity"></activity>
+        <activity android:name=".ui.map.MapActivity"></activity>
+        <activity android:name=".ui.main.MainActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:theme="@style/LoginTheme">
@@ -22,14 +26,15 @@
         </activity>
         <activity
             android:name=".ui.register.RegisterActivity"
-            android:theme="@style/LoginTheme"></activity>
-        <activity
-            android:name=".ui.detailtripdriver.DetailDriverActivity">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
+            android:theme="@style/LoginTheme" />
+        <activity android:name=".ui.detailtripdriver.DetailDriverActivity">
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
     </application>
 
