--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.admin.ridesharemobileclient">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.map.MapActivity"></activity>
+        <activity android:name=".ui.registertrip.RegisterTripActivity"></activity>
+        <activity android:name=".ui.mytrip.MyTripActivity" />
+        <activity android:name=".ui.map.MapActivity" />
         <activity android:name=".ui.main.MainActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
@@ -27,7 +29,7 @@
         <activity
             android:name=".ui.register.RegisterActivity"
             android:theme="@style/LoginTheme" />
-        <activity android:name=".ui.detailtripdriver.DetailDriverActivity">
+        <activity android:name=".ui.detailtripregister.DetailTripRegisterActivity">
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
